--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,35 @@
 certifi==2021.10.8
+charset-normalizer==2.0.9
+colorama==0.4.4
+cycler==0.11.0
+deap==1.3.1
 et-xmlfile==1.1.0
+fonttools==4.28.5
+idna==3.3
 joblib==1.1.0
+kiwisolver==1.3.2
+matplotlib==3.5.1
 numpy==1.21.4
 openpyxl==3.0.9
+packaging==21.3
 pandas==1.3.4
+Pillow==8.4.0
 pip==21.0.1
+pyparsing==3.0.6
 python-dateutil==2.8.2
 pytz==2021.3
+requests==2.26.0
 scikit-learn==1.0.1
 scipy==1.7.3
 setuptools==58.0.4
 six==1.16.0
 sklearn==0.0
+stopit==1.1.2
 threadpoolctl==3.0.0
+TPOT==0.11.7
+tqdm==4.62.3
+update-checker==0.18.0
+urllib3==1.26.7
 wheel==0.37.0
 wincertstore==0.2
+xgboost==1.5.1
