--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,58 @@
+backcall==0.2.0
+backports.functools-lru-cache==1.6.4
 certifi==2021.10.8
 charset-normalizer==2.0.9
 colorama==0.4.4
 cycler==0.11.0
 deap==1.3.1
+debugpy==1.5.1
+decorator==5.1.0
+entrypoints==0.3
 et-xmlfile==1.1.0
 fonttools==4.28.5
 idna==3.3
+ipykernel==6.4.1
+ipython==7.30.1
+ipython-genutils==0.2.0
+jedi==0.18.1
 joblib==1.1.0
+jupyter-client==7.1.0
+jupyter-core==4.9.1
 kiwisolver==1.3.2
 matplotlib==3.5.1
+matplotlib-inline==0.1.3
+nest-asyncio==1.5.4
 numpy==1.21.4
 openpyxl==3.0.9
 packaging==21.3
 pandas==1.3.4
+parso==0.8.3
+pickleshare==0.7.5
 Pillow==8.4.0
 pip==21.0.1
+prompt-toolkit==3.0.24
+Pygments==2.10.0
 pyparsing==3.0.6
 python-dateutil==2.8.2
 pytz==2021.3
+pywin32==303
+pyzmq==22.3.0
 requests==2.26.0
 scikit-learn==1.0.1
 scipy==1.7.3
+seaborn==0.11.2
 setuptools==58.0.4
 six==1.16.0
 sklearn==0.0
 stopit==1.1.2
 threadpoolctl==3.0.0
+tornado==6.1
 TPOT==0.11.7
 tqdm==4.62.3
+traitlets==5.1.1
 update-checker==0.18.0
 urllib3==1.26.7
+wcwidth==0.2.5
 wheel==0.37.0
 wincertstore==0.2
 xgboost==1.5.1
